--- a/love.html
+++ b/love.html
@@ -102,7 +102,7 @@
     <img src="./小红照片.png" id="logo">
 </div>
 <canvas class="canvas" width="1820" height="905"></canvas>
-<p class="text" style="color: #30abed;">
+<p class="text" style="color: #a8ed30;">
     love you
     <br/>
     <span id="span_dt_dt"></span>
