--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </head>
 
 <body>
-<!--更改为你女朋友的头像-->
+
 <div class="cs">
     <img src="./小红照片.png" id="logo">
 </div>
@@ -134,7 +134,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
 			
-            S.UI.simulate("小红|I'm|大川|Nice|to|Meet|You|#countdown 3|520|1314");
+            S.UI.simulate("小红|I'm|大川|我|喜|欢|你|#countdown 3|520|1314");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
