--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
 			
-            S.UI.simulate("小红|I'm|大川|我|喜|欢|你|#countdown 3|520|1314");
+            S.UI.simulate("小红|I'm|大川|我|喜欢|你|#countdown 3|520|1314");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
